# jameth

./: .gitignore  README.md  README.org  jameth.cabal  scheme-analysis.cabal  shell.nix  stack.yaml
analysis-server/: analysis-server.cabal
analysis-server/main/: Main.hs
analysis-server/src/: Server.hs  ServerHelpers.hs
analysis-server/src/AnalysisServer/: Server.hs  ServerTypes.hs
analysis-server/src/AnalysisServer/Handlers/: HandleScheme.hs
analysis-server/src/Handlers/: HandleExecution.hs  HandleScheme.hs  HandleStaticAnalysis.hs  Helpers.hs  Types.hs
analysis-server/src/Main/: Main.hs
analysis-ui/: .gitignore  CausesError.elm  Main.elm  elm-package.json  package-lock.json  package.json
analysis-ui/Report/: Model.elm  Report.elm  View.elm
code-generation/: code-generation.cabal  stack.yaml
code-generation/src/Haskell/: Main.hs
code-generation/src/Haskell/CodeGeneration/: EvalFile.hs  Generation.hs  RandomGeneration.hs
code-generation/src/Prolog/: generate.pl
doc/: dependencies-depth-one.dot  proposal.tex  useful-reading.org  wish-list.org
interpreter/: JLEval.hs  JLParse.hs  JLSyntax.hs  JLTokenize.hs  JLTypes.hs
interpreter/Parse/: JLParse.hs  JLTypes.hs
scheme-analysis/: scheme-analysis.cabal
scheme-analysis/main/: Main.hs
scheme-analysis/src/Analysis/: Analysis.hs  AnalysisTypes.hs
scheme-analysis/src/Analysis/AbstractInterpreter/: Interpreter.hs  PrimProcs.hs  Types.hs
scheme-analysis/src/Analysis/Analyzers/: AppendAnalysis.hs
scheme-analysis/src/Analysis/StaticAnalysis/: Analysis.hs  AnalysisForms.hs  AnalysisPrimitives.hs  AnalysisTypes.hs  Display.hs  FormTypes.hs  ParseTypes.hs  PatternTypes.hs  Patterns.hs  PrimProcs.hs  ReferenceTypes.hs  Types.hs
scheme-analysis/src/Analysis/StaticAnalysis/Patterns/: AppendPattern.hs  EtaPattern.hs  Helpers.hs
scheme-analysis/src/DataFlow/: DataFlow.hs  PrimProcs.hs  Types.hs
scheme-analysis/src/Interpreter/: EvalTypes.hs  Evaluate.hs  JLEval.hs  PrimProcs.hs  Types.hs
scheme-analysis/src/Scheme/: CPSScheme.hs  Display.hs  Environments.hs  Forms.hs  JLEvaluationTypes.hs  JLParse.hs  JLParsingTypes.hs  JLPrimitiveProcs.hs  JLPrimitiveSyntax.hs  JLPrimitiveSyntax.hs-boot  JLTokenize.hs  JLTypes.hs  Macros.hs  Parse.hs  ParseTypes.hs  PrimitiveProcedures.hs  PrimitiveSyntax.hs  PrimitiveSyntax.hs-boot  ReadSource.hs  Tokenize.hs  Types.hs
scheme-analysis/test/: Tests.hs
scheme-analysis/test/Analysis/: AppendAnalysisTest.hs
scheme-analysis/test/Evaluation/: EvaluationTest.hs
scheme-analysis/test/Parse/: Helpers.hs  ParseApplicationTest.hs  ParseConstantsTest.hs  ParseLambdaTest.hs  ParseQuoteTest.hs  TokenizeTest.hs
scheme/Analysis/: Analysis.hs  AnalysisTypes.hs
scheme/Analysis/Analyzers/: AppendAnalysis.hs
scheme/Interpreter/: JLEval.hs  JLExpander.hs  JLLexingTypes.hs  JLMacro.hs  JLReadSource.hs
scheme/LambdaCalculus/: LambdaEval.hs
scheme/Scheme/: JLEvaluationTypes.hs  JLParse.hs  JLParsingTypes.hs  JLPrimitiveProcs.hs  JLPrimitiveSyntax.hs  JLPrimitiveSyntax.hs-boot  JLReadSource.hs  JLTokenize.hs  JLTypes.hs
src/: Main.hs
src/Parse/: Parse.hs  Types.hs
test/: Tests.hs
test/Parse/: ParseConstants.hs  ParseConstantsTest.hs  ParseQuote.hs  ParseQuoteTest.hs  ParseTest.hs
