name:                jameth
version:             0.1.0.0
author:              James Coleman Gibson
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable jameth
  hs-source-dirs:      src
                     , src/Parse
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
  other-modules:       Parse
                     , Types
