name:                jameth
version:             0.1.0.0
author:              James Coleman Gibson
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      interpreter/
  exposed-modules:     JLParse
                     , JLEval
                     , JLTypes
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , either
                     , transformers
  default-language:    Haskell2010


executable jameth-exec
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , jameth
  other-modules:
  default-language:    Haskell2010


test-suite jameth-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
                     , test/Parse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , jameth
  other-modules:       ParseTest
  default-language:    Haskell2010
