name:                analysis-server
version:             0.1.0.0
author:              James Coleman Gibson
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Server
  other-modules:       ServerHelpers
                     , ServerTypes
                     , Handlers.HandleExecution
                     , Handlers.HandleStaticAnalysis
                     , Handlers.Types
                     , Handlers.Helpers
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , snap-core
                     , snap-server
                     , aeson
                     , text
                     , bytestring
                     , scheme-analysis
                     , mtl
                     , path
  default-language:    Haskell2010

executable analysis-server
  hs-source-dirs:      main/
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , scheme-analysis
                     , analysis-server
                     , path
  other-modules:
  default-language:    Haskell2010