name:                code-generation
version:             0.1.0.0
homepage:            https://github.com/rbubulka/DeepLearningProject
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:

executable code-generation
  ghc-options:
              -O2
              -threaded
              -fexcess-precision
              -optc-O3
              -with-rtsopts=-N4
              -funfolding-use-threshold=16
  hs-source-dirs:      src/Haskell
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scheme-analysis
                     , conduit-combinators
                     , conduit-extra
                     , conduit
                     , monad-parallel
                     , text
                     , resourcet
                     , bytestring
  other-modules:       CodeGeneration.Generation
                     , CodeGeneration.EvalFile
