name:                scheme-analysis
version:             0.1.0.0
author:              James Coleman Gibson
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable scheme-analysis
  hs-source-dirs:      main/
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , scheme-analysis
                     , groom
  other-modules:
  default-extensions:  Strict
  default-language:    Haskell2010

library
  hs-source-dirs:      src/
  exposed-modules:     Analysis.StaticAnalysis.Analysis
                     , Analysis.StaticAnalysis.AnalysisForms
                     , Analysis.StaticAnalysis.Types
                     , Analysis.StaticAnalysis.Display
                     , Analysis.StaticAnalysis.Patterns
                     , Scheme.Types
                     , Scheme.ParseTypes
                     , Scheme.ReadSource
                     , Interpreter.Types
                     , Interpreter.Evaluate
                     , Scheme.Tokenize
                     , Scheme.Parse
                     , Scheme.Display
  other-modules:       Scheme.PrimitiveProcedures
                     , Scheme.PrimitiveSyntax
                     , Interpreter.PrimProcs
                     , Analysis.StaticAnalysis.PrimProcs
                     , Analysis.StaticAnalysis.Patterns.Helpers
                     , Analysis.StaticAnalysis.AnalysisPrimitives
                     , Analysis.StaticAnalysis.Patterns.AppendPattern
                     , Analysis.StaticAnalysis.Patterns.EtaPattern
                     , Analysis.StaticAnalysis.PatternTypes
                     , Analysis.StaticAnalysis.AnalysisTypes
                     , Analysis.StaticAnalysis.FormTypes
                     , Analysis.StaticAnalysis.ParseTypes
                     , Analysis.StaticAnalysis.ReferenceTypes
                     , Scheme.Forms
                     , Scheme.Environments
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , either
                     , transformers
                     , containers
                     , mtl
                     , path
                     , path-io
                     , safe
                     , groom
                     , aeson
                     , text
  default-language:    Haskell2010
  default-extensions:  Strict

test-suite scheme-analysis-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test/
                     , test/Parse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , scheme-analysis
  other-modules:       Parse.ParseConstantsTest
                     , Parse.ParseQuoteTest
                     , Parse.ParseLambdaTest
                     , Parse.ParseApplicationTest
                     , Parse.TokenizeTest
                     , Parse.Helpers
                     , Evaluation.EvaluationTest
                     , Analysis.AppendAnalysisTest
  default-language:    Haskell2010
